force-app/main/default/objects/Course__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <label>Course Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Name of the course</description>
</CustomField>