force-app/main/default/objects/Course__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <label>Student</label>
    <type>Lookup</type>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Student</relationshipLabel>
    <relationshipName>Student</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Student who is registered for this course</description>
</CustomField>